--- a/Home/home.html
+++ b/Home/home.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lalezar&display=swap" rel="stylesheet">
     <!-- Đường dẫn file CSS -->
     <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="./libraryGrid.css">
     
     <title>Home</title>
 </head>
