--- a/Home/home.html
+++ b/Home/home.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="logo.jpeg" type="image/x-icon">
+    <link rel="shortcut icon" href="logoWeb.jpg" type="image/x-icon">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Lalezar&display=swap" rel="stylesheet">
     <!-- Đường dẫn file CSS -->
-    <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="./home.css">
     <link rel="stylesheet" href="./libraryGrid.css">
     
     <title>Home</title>
