--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="logoWeb.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="../TripTrek/Home/logoWeb.jpg" type="image/x-icon">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -23,16 +23,16 @@
                 <a href="./home.html">
                     <li>Trang chủ</li>
                 </a>
-                <a href="../intro.html">
+                <a href="./intro.html">
                     <li>Giới thiệu</li>
                 </a>
-                <a href="../tourism.html">
+                <a href="./tourism.html">
                     <li>Du lịch</li>
                 </a>
-                <a href="../tourist.html">
+                <a href="./tourist.html">
                     <li>Cẩm nang du lịch</li>
                 </a>
-                <a href="../contact.html">
+                <a href="./contact.html">
                     <li>Liên hệ</li>
                 </a>
             </ul>
@@ -47,7 +47,7 @@
                     Setting
                 </a>
                 <hr>
-                <a href="../SigninandSignUp/Signin.html" style="color: red; padding-top: 10px; ">
+                <a href="../TripTrek/SigninandSignUp/Signin.html" style="color: red; padding-top: 10px; ">
                     Logout
                 </a>
             </div>
@@ -152,9 +152,9 @@
                         </ul>
                     </div>
                     <div class="right col l-6 m-6 c-12">
-                        <img src="p21.jpg" alt="">
-                        <img src="p22.jpg" alt="">
-                        <img src="p23.jpg" alt="">
+                        <img src="../TripTrek/Home/p21.jpg" alt="">
+                        <img src="../TripTrek/Home/p22.jpg" alt="">
+                        <img src="../TripTrek/Home/p23.jpg" alt="">
                     </div>
                 </div>
             </div>
@@ -163,21 +163,21 @@
             <div class="grid wide">
                 <div class="row">
                     <div class="col l-3 m-6 c-6">
-                        <img src="opt1.png" alt="">
+                        <img src="../TripTrek/Home/opt1.png" alt="">
                         <div class="content">
                             <h4>Các Thông Tin Tour Mới Nhất</h4>
                             <p>Luôn cập nhật các thông tin mới nhất, đầy đủ nhất về các tour tốt nhất hiện nay</p>
                         </div>
                     </div>
                     <div class="col l-3 m-6 c-6">
-                        <img src="opt2.png" alt="">
+                        <img src="../TripTrek/Home/opt2.png" alt="">
                         <div class="content">
                             <h4>Chuyên gia tư vấn chi tiết nhất</h4>
                             <p>Các tư vấn chuyên gia luôn sẵn sàng tư vấn tận tâm chi tiết tốt nhất</p>
                         </div>
                     </div>
                     <div class="col l-3 m-6 c-6">
-                        <img src="opt3.png" alt="">
+                        <img src="../TripTrek/Home/opt3.png" alt="">
                         <div class="content">
                             <h4>Các Khuyến Mại & Giá Luôn Tốt Nhất</h4>
                             <p>Các deal & chương trình promotion được cập nhật mới nhất với giá tốt nhất cho bạn</p>
@@ -192,13 +192,13 @@
             <div class="grid wide">
                 <div class="row">
                     <div class="col l-3 m-6 c-6">
-                        <img src="sale1.png" alt="">
+                        <img src="../TripTrek/Home/sale1.png" alt="">
                     </div>
                     <div class="col l-3 m-6 c-6">
-                        <img src="sale2.png" alt="">
+                        <img src="../TripTrek/Home/sale2.png" alt="">
                     </div>
                     <div class="col l-3 m-6 c-6">
-                        <img src="sale3.png" alt="">
+                        <img src="../TripTrek/Home/sale3.png" alt="">
                     </div>
                 </div>
             </div>
@@ -210,7 +210,7 @@
                 <div class="row">
                     <div class="l-3 m-6 c-6">
                         <div class="image-container">
-                            <img src="lt1.png" alt="">
+                            <img src="../TripTrek/Home/lt1.png" alt="">
                             <div class="text-overlay">
                                 <p class="name_local">Vịnh Hạ Long</p>
                                 <p class="reviews">834,548 lượt đánh giá</p>
@@ -219,7 +219,7 @@
                     </div>
                     <div class="l-3 m-6 c-6">
                         <div class="image-container">
-                            <img src="lt2.png" alt="">
+                            <img src="../TripTrek/Home/lt2.png" alt="">
                             <div class="text-overlay">
                                 <p class="name_local">Bà Nà Hill</p>
                                 <p class="reviews">834,548 lượt đánh giá</p>
@@ -228,7 +228,7 @@
                     </div>
                     <div class="l-3 m-6 c-6">
                         <div class="image-container">
-                            <img src="lt3.png" alt="">
+                            <img src="../TripTrek/Home/lt3.png" alt="">
                             <div class="text-overlay">
                                 <p class="name_local">Phố cổ Hội An</p>
                                 <p class="reviews">834,548 lượt đánh giá</p>
@@ -237,7 +237,7 @@
                     </div>
                     <div class="l-3 m-6 c-6">
                         <div class="image-container">
-                            <img src="lt4.png" alt="">
+                            <img src="../TripTrek/Home/lt4.png" alt="">
                             <div class="text-overlay">
                                 <p class="name_local">Đảo Lý Sơn</p>
                                 <p class="reviews">834,548 lượt đánh giá</p>
@@ -246,7 +246,7 @@
                     </div>
                     <div class="l-3 m-6 c-6">
                         <div class="image-container">
-                            <img src="lt5.png" alt="">
+                            <img src="../TripTrek/Home/lt5.png" alt="">
                             <div class="text-overlay">
                                 <p class="name_local">Bà Nà Hill</p>
                                 <p class="reviews">834,548 lượt đánh giá</p>
@@ -255,7 +255,7 @@
                     </div>
                     <div class="l-3 m-6 c-6">
                         <div class="image-container">
-                            <img src="lt6.png" alt="">
+                            <img src="../TripTrek/Home/lt6.png" alt="">
                             <div class="text-overlay">
                                 <p class="name_local">Cù Lao Chàm</p>
                                 <p class="reviews">834,548 lượt đánh giá</p>
@@ -264,7 +264,7 @@
                     </div>
                     <div class="l-3 m-6 c-6">
                         <div class="image-container">
-                            <img src="lt7.png" alt="">
+                            <img src="../TripTrek/Home/lt7.png" alt="">
                             <div class="text-overlay">
                                 <p class="name_local">Gành Đá Đĩa</p>
                                 <p class="reviews">834,548 lượt đánh giá</p>
@@ -273,7 +273,7 @@
                     </div>
                     <div class="l-3 m-6 c-6">
                         <div class="image-container">
-                            <img src="lt8.png" alt="">
+                            <img src="../TripTrek/Home/lt8.png" alt="">
                             <div class="text-overlay">
                                 <p class="name_local">Côn Đảo</p>
                                 <p class="reviews">834,548 lượt đánh giá</p>
@@ -303,7 +303,7 @@
                 <div class="grid wide">
                     <div class="row">
                         <div class="col l-3 m-6 c-6">
-                            <img src="lt4.png" alt="">
+                            <img src="../TripTrek/Home/lt4.png" alt="">
                             <h3>Cắm trại ở Chư Nâm ngắm thiên đường mây ở độ cao</h3>
                             <div class="admin">
                                 <div class="left">
@@ -319,7 +319,7 @@
                             </p>
                         </div>
                         <div class="col l-3 m-6 c-6">
-                            <img src="lt5.png" alt="">
+                            <img src="../TripTrek/Home/lt5.png" alt="">
                             <h3>Cắm trại ở Chư Nâm ngắm thiên đường mây ở độ cao</h3>
                             <div class="admin">
                                 <div class="left">
@@ -335,7 +335,7 @@
                             </p>
                         </div>
                         <div class="col l-3 m-6 c-6">
-                            <img src="lt3.png" alt="">
+                            <img src="../TripTrek/Home/lt3.png" alt="">
                             <h3>Cắm trại ở Chư Nâm ngắm thiên đường mây ở độ cao</h3>
                             <div class="admin">
                                 <div class="left">
@@ -355,7 +355,7 @@
             </div>
         </div>
         <div class="p-5">
-            <img src="letter.png" alt="">
+            <img src="../TripTrek/Home/letter.png" alt="">
             <h2>Đăng ký nhận bản tin của chúng tôi để nhận
                 <hr>
                 tất cả các thông tin cập nhật và tin tức về Triptrek.
@@ -376,11 +376,11 @@
               <div class="footer-payment">
                 <p>Chấp nhận phương thức thanh toán</p>
                 <div class="payment-icons">
-                  <img src="visa.png" alt="Visa">
-                  <img src="mastercard.png" alt="MasterCard">
-                  <img src="jcb.png" alt="JCB">
-                  <img src="amex.png" alt="Amex">
-                  <img src="paypal.png" alt="PayPal">
+                  <img src="../TripTrek/Home/visa.png" alt="Visa">
+                  <img src="../TripTrek/Home/mastercard.png" alt="MasterCard">
+                  <img src="../TripTrek/Home/jcb.png" alt="JCB">
+                  <img src="../TripTrek/Home/amex.png" alt="Amex">
+                  <img src="../TripTrek/Home/paypal.png" alt="PayPal">
                 </div>
               </div>
               <div class="footer-links">
@@ -402,12 +402,12 @@
             <div class="footer-bottom">
               <p>© 2024 bản quyền bởi TripTrek.</p>
               <div class="social-icons">
-                <a href="#"><img src="facebook.png" alt="Facebook"></a>
-                <a href="#"><img src="instagram.png" alt="Instagram"></a>
-                <a href="#"><img src="twitter.png" alt="Twitter"></a>
-                <a href="#"><img src="linkedin.png" alt="LinkedIn"></a>
-                <a href="#"><img src="youtube.png" alt="YouTube"></a>
-                <a href="#"><img src="tiktok.png" alt="TikTok"></a>
+                <a href="#"><img src="../TripTrek/Home/facebook.png" alt="Facebook"></a>
+                <a href="#"><img src="../TripTrek/Home/instagram.png" alt="Instagram"></a>
+                <a href="#"><img src="../TripTrek/Home/twitter.png" alt="Twitter"></a>
+                <a href="#"><img src="../TripTrek/Home/linkedin.png" alt="LinkedIn"></a>
+                <a href="#"><img src="../TripTrek/Home/youtube.png" alt="YouTube"></a>
+                <a href="#"><img src="../TripTrek/Home/tiktok.png" alt="TikTok"></a>
               </div>
             </div>
         </footer>          
