--- a/information.html
+++ b/information.html
@@ -171,6 +171,6 @@
         </div>
       </div>
     </footer>
-    <script src="./Home/home.js"></script>
+    <script src="./home.js"></script>
   </body>
 </html>
