--- a/intro.html
+++ b/intro.html
@@ -14,7 +14,7 @@
       <h1>TripTrek</h1>
       <div class="menu">
         <ul>
-          <a href="./Home/home.html">
+          <a href="./home.html">
             <li>Trang chủ</li>
           </a>
           <a href="intro.html">
@@ -199,7 +199,7 @@
         </div>
       </div>
     </footer>
-    <script src="./Home/home.js"></script>
+    <script src="./home.js"></script>
     <script src="https://app.tudongchat.com/js/chatbox.js"></script>
     <script>
         const tudong_chatbox = new TuDongChat('Gmcy69TbPltvDjsOV7zcH')
