--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
       <h1>TripTrek</h1>
       <div class="menu">
           <ul>
-              <a href="./Home/home.html">
+              <a href="./home.html">
                   <li>Trang chủ</li>
               </a>
               <a href="intro.html">
@@ -159,7 +159,7 @@
         </div>
       </div>
     </footer>
-    <script src="./Home/home.js"></script>
+    <script src="./home.js"></script>
     <script>
       const tudong_chatbox = new TuDongChat('Gmcy69TbPltvDjsOV7zcH')
       tudong_chatbox.initial()
