--- a/tourist.html
+++ b/tourist.html
@@ -283,7 +283,7 @@
         </div>
       </div>
   </footer>
-  <script src="./Home/home.js"></script>
+  <script src="./home.js"></script>
   <script src="https://app.tudongchat.com/js/chatbox.js"></script>
     <script>
         const tudong_chatbox = new TuDongChat('Gmcy69TbPltvDjsOV7zcH')
